# mlflow-sample

./: .gitignore  README.md  curl-sample.http  pyproject.toml
.mlflow/: credentials
scripts/: compare_runs.py  train.py
