[tool.poetry]
name = "mlflow-sample"
version = "0.1.0"
description = ""
authors = ["Mitsuru Takeda <m.t.hagaren1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.16.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
hyperopt = "^0.2.7"
keras = "^3.5.0"
numpy = "1.26.4"
tensorflow = "^2.17.0"
virtualenv = "^20.26.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
